# eaOpcUa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_IO.txt  example_IO2.txt  example_operation.txt  main.cpp  prep_and_build.sh
src/: EA.hpp  file.hpp  operations.hpp  server.hpp  types.hpp
